Fix the layout - row spacing

--- a/source/assets/stylesheets/core/_layout.sass
+++ b/source/assets/stylesheets/core/_layout.sass
@@ -16,7 +16,7 @@
     border-bottom-color: $base-color
 
   +respond-to(800px)
-    padding: rem($base-whitespace * 4) 0
+    padding: rem($base-whitespace * 4) 0 rem($base-whitespace * 2)
     text-align: left
 
 // ----- Cell ----- //
